# Elgine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  package.json
assets/: circle.fbx  landscape.fbx  test.dae  test.fbx
editor/: CMakeLists.txt
engine/: CMakeLists.txt  elgine.cpp  elgine.hpp  opengl.hpp
engine/components/: CMakeLists.txt  mesh.cpp  mesh.hpp  texture.hpp  transform.hpp
engine/ecs/: CMakeLists.txt  base.hpp  component-pool.hpp  component.hpp  ecs.hpp  entity.hpp  pool.hpp  scene-view.hpp  scene.hpp
engine/ecs/components/: components.hpp  physics_update.hpp  quaternion.hpp  transform.hpp  update.hpp  vector3.hpp
engine/entities/: CMakeLists.txt  frame-manager.cpp  frame-manager.hpp
engine/include/: elgine.hpp
engine/include/elgine/: CMakeLists.txt  components.hpp  default-shader.hpp  ecs.hpp  elgine.hpp  globals.hpp  opengl.hpp  shader-library.cpp  shader-library.hpp  systems.hpp  types.hpp  utils.hpp
engine/include/elgine/camera/: camera.hpp
engine/include/elgine/components/: CMakeLists.txt  camera-component.hpp  camera-movement.hpp  input.hpp  mesh-component.hpp  mesh.hpp  sun-component.hpp  transform-component.hpp  transform.hpp
engine/include/elgine/ecs/: base.hpp  component-pool.hpp  component.hpp  entity.hpp  scene-view.hpp  scene.hpp
engine/include/elgine/entities/: editor-camera.hpp  plane.hpp
engine/include/elgine/input/: input-event.hpp  input-key.hpp  input-manager.hpp  input.hpp
engine/include/elgine/systems/: camera-movement-system.hpp  mesh-rendering.hpp  sun-movement-system.hpp
engine/include/elgine/types/: color.hpp  color32.hpp  mat4.hpp  material.hpp  quat.hpp  shader.hpp  texture.hpp  triangle.hpp  vec2.hpp  vec3.hpp  vector2.hpp  vertex.hpp
engine/include/elgine/utils/: CMakeLists.txt  asset-loader.hpp  debug.hpp  math.hpp  time.hpp
engine/lib/: CMakeLists.txt  opengl.hpp  stb_image.hpp
engine/lib/glm/ext/: matrix_transform.inl
engine/lib/imgui/: CMakeLists.txt  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
engine/lib/imgui-master/: CMakeLists.txt
engine/lib/imgui/include/imgui/: imconfig.h  imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
engine/scene/: scenemanager.hpp
engine/src/: CMakeLists.txt  default-shader.cpp  elgine.cpp  globals.cpp
engine/src/camera/: CMakeLists.txt  camera.cpp
engine/src/components/: CMakeLists.txt  mesh-component.cpp  mesh.cpp  transform-component.cpp
engine/src/ecs/: CMakeLists.txt  component.cpp
engine/src/entities/: CMakeLists.txt  editor-camera.cpp  plane.cpp
engine/src/input/: CMakeLists.txt  input-manager.cpp  input.cpp
engine/src/systems/: CMakeLists.txt  camera-movement-system.cpp  mesh-rendering.cpp  sun-movement-system.cpp
engine/src/types/: CMakeLists.txt  material.cpp  quat.cpp  shader.cpp  vec3.cpp
engine/src/utils/: asset-loader.cpp  debug.cpp  math.cpp
engine/systems/: CMakeLists.txt  mesh-rendering.cpp  mesh-rendering.hpp
engine/types/: CMakeLists.txt  color.hpp  color32.hpp  quat.hpp  quaternion.hpp  shader.cpp  shader.hpp  texture.hpp  vec3.hpp  vector2.hpp  vector3.hpp  vertex.hpp
engine/utils/: CMakeLists.txt  asset-loader.cpp  asset-loader.hpp  debug.cpp  debug.hpp  loader.cpp  loader.hpp  math.hpp  time.cpp  time.hpp
game/: CMakeLists.txt  gamemanager.cpp  gamemanager.hpp
game/entities/: CMakeLists.txt  player.cpp  player.hpp
glslwrap/: CMakeLists.txt  main.cpp
glslwrap/include/glslwrap/: CMakeLists.txt  definitions.hpp
shaders/: CMakeLists.txt  shader-library.cpp  shader-library.hpp  shaders.cpp  shaders.hpp
shaders/game/: default.frag  default.vert  new_shader.vert  test.vert  tutorial.frag  tutorial.vert
tools/embed/: main.cpp
