target_include_directories(ElgineEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_sources(ElgineEngine PRIVATE shader-library.cpp)

add_subdirectory(ecs)
add_subdirectory(utils)
add_subdirectory(types)
add_subdirectory(systems)
add_subdirectory(components)
add_subdirectory(entities)
add_subdirectory(input)
add_subdirectory(camera)
